k8s-rpi-apps-dexidp/secured-ingress-external.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex-ingress-external
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/externalroutes"
spec:
  entryPoints:
    - websecure-external
  routes:
  - match: Host(`<dexhostname>`)
    kind: Rule
    services:
    - name: dexidp
      port: 5556
  tls:
    certResolver: godaddy
